# toronto-back

./: .dockerignore  .gitignore  Dockerfile  README.md  all_vehicles.pkl  database.db  docker-compose.yaml  pyproject.toml  sample.env  start.sh  tox.ini
app/: database.py  db_session.py  main.py  models.py  setup.py
app/config/: __init__.py
app/routers/: __init__.py  coords.py  data.py
app/schemas/: __init__.py  coords.py  update.py  user.py  vehicle.py
app/services/: __init__.py  gas_calc.py
client/: Clean.py  Formula.py  Gas Prices.py  Gas_Prices.py
data/: .gitignore  Diesel.xlsx  Mid-Grade.xlsx  Premium.xlsx  Regular.xlsx
data/vehicle/: all_vehicles.xlsx  vehicles.xlsx  vehicles_year.xlsx
tasks/: __init__.py
tests/: test_calc.py  test_calculation.py  test_routes.py
