[tool.poetry]
name = "toronto-back"
version = "0.1.0"
description = ""
authors = ["Nikolay <nchernov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
requests = "^2.27.1"
pandas = "^1.4.2"
invoke = "^1.7.0"
pydotenv = "^0.0.7"
openpyxl = "^3.0.9"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
selenium = "^4.1.3"
pyxlsb = "^1.0.9"
SQLAlchemy = "^1.4.36"
passlib = "^1.7.4"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
